Se agrego un archivo

--- a/Codigo/HTML/registro.html
+++ b/Codigo/HTML/registro.html
@@ -10,7 +10,7 @@
 <body>
     <form>
         <h2>
-            CREAR USUARIO
+            CREAR ESTUDIANTE
         </h2>
 
         <div class="icon-container">
